check_code_2.txt
    Checking hyper-timeout v0.4.1
    Checking axum v0.6.20
warning: praborrow-prover@1.2.2: Z3 library not found via pkg-config: Could not run `PKG_CONFIG_ALLOW_SYSTEM_LIBS=1 PKG_CONFIG_ALLOW_SYSTEM_CFLAGS=1 pkg-config --libs --cflags z3`
warning: praborrow-prover@1.2.2: Ensure Z3 is installed and PKG_CONFIG_PATH is set if you intend to use the z3-backend.
   Compiling praborrow-lease v1.2.2 (D:\Project\PraBorrow\crates\praborrow-lease)
warning: praborrow-prover@1.2.2: Z3 library not found via pkg-config: Could not run `PKG_CONFIG_ALLOW_SYSTEM_LIBS=1 PKG_CONFIG_ALLOW_SYSTEM_CFLAGS=1 pkg-config --libs --cflags z3`
warning: praborrow-prover@1.2.2: Ensure Z3 is installed and PKG_CONFIG_PATH is set if you intend to use the z3-backend.
    Checking tonic v0.9.2
    Checking opentelemetry-proto v0.4.0
    Checking opentelemetry-otlp v0.14.0
error[E0507]: cannot move out of `request`, a captured variable in an `FnMut` closure
   --> crates\praborrow-lease\src\grpc.rs:482:26
    |
470 |         let request = proto::RequestVoteRequest {
    |             ------- captured outer variable
...
478 |             .send_with_retry(peer_id, || {
    |                                       -- captured by this `FnMut` closure
...
482 |                 Box::pin(async move {
    |                          ^^^^^^^^^^ `request` is moved here
...
485 |                         .request_vote(Request::new(request))
    |                                                    -------
    |                                                    |
    |                                                    variable moved due to use in coroutine
    |                                                    move occurs because `request` has type `RequestVoteRequest`, which does not implement the `Copy` trait
    |
help: `Fn` and `FnMut` closures require captured values to be able to be consumed multiple times, but `FnOnce` closures may consume them only once
   --> crates\praborrow-lease\src\grpc.rs:408:12
    |
408 |           F: FnMut() -> std::pin::Pin<
    |  ____________^
409 | |             Box<dyn std::future::Future<Output = Result<R, NetworkError>> + Send>,
410 | |         >,
    | |_________^
help: consider cloning the value before moving it into the closure
    |
482 ~                 Box::pin({
483 +                 let value = request.clone();
484 ~                 async move {
485 |                     let mut client = pool.get_connection(peer_id, &address).await?;
486 |                     let response = client
487 ~                         .request_vote(Request::new(value))
488 |                         .await
489 |                         .map_err(|e| NetworkError::TransportError(e.to_string()))?;
490 |                     Ok(response.into_inner())
491 ~                 }
492 ~                 })
    |

For more information about this error, try `rustc --explain E0507`.
error: could not compile `praborrow-lease` (lib) due to 1 previous error
